Fix: Left align hero text on about page
Left align the hero text on the about page for small width viewports.

--- a/styles.css
+++ b/styles.css
@@ -357,7 +357,7 @@ body {
   .hero-text {
     font-size: 2.5rem;
     line-height: 2.75rem;
-    text-align: right;
+    text-align: left;
   }
 
   .hero-image {
